--- a/SignIn.html
+++ b/SignIn.html
@@ -27,7 +27,7 @@
 </head>
     <form action="H" method="POST">
        <fieldset>
-        <p>Sign In</p>
+        <legend>Sign In</legend>
         <label>Email Address</label><br>
         <input type="email" placeholder="Email" required><br><br>
         <label>Password</label><br>
